Worked on the section on the computational cost depending on K
Added section with explaiation 
Updated Notebook to mek it more in lin with the text
Added a short plot to illustrate the approxiamtion

--- a/Code/Computational_cost.ipynb
+++ b/Code/Computational_cost.ipynb
@@ -401,9 +401,9 @@
     "\n",
     "\n",
     "$$\n",
-    "d_k = \\gamma \\min((K-k+1)p,(k-1)m) = \\begin{cases}\n",
-    "    \\gamma (k-1)m &\\text{if } k\\leq \\frac{M+(K+1)P}{(M+P)} \\\\\n",
-    "    \\gamma (K+1-k)p &\\text{if } k > \\frac{M+(K+1)P}{(M+P)} \\\\\n",
+    "d_k = \\gamma \\min((K-k+1)\\frac{P}{K},(k-1)\\frac{M}{K}) = \\begin{cases}\n",
+    "    \\gamma (k-1)\\frac{M}{K} &\\text{if } k\\leq \\frac{M+(K+1)P}{(M+P)} \\\\\n",
+    "    \\gamma (K+1-k)\\frac{P}{K} &\\text{if } k > \\frac{M+(K+1)P}{(M+P)} \\\\\n",
     "\\end{cases}\n",
     "$$\n",
     "\n"
@@ -413,14 +413,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$rank(H) \\approx \\gamma \\cdot \\text{height} \\cdot \\text{width}$$\n",
+    "$$rank(H) \\propto \\gamma \\cdot \\text{height} \\cdot \\text{width}$$\n",
     "\n",
     "### Product of height and width:\n",
     "The second approxiamtion is based on the idea that the singular vlaues increase are related to the Frobenius norm by $\\|H\\|_F = \\sqrt{\\sum \\sigma_i^2}$.\n",
     "As the Frobenius norm increases, this should also result in increasing singular values.\n",
     "If we consider the elements of $H$ as cosntant, then $\\|H\\|_F \\propto \\text{size(H)}$\n",
     "\n",
-    "$$(K-k+1)p(k-1)m$$\n"
+    "$$(K-k+1)(k-1) \\frac{PM}{K^2\\min(P,M)}$$\n"
    ]
   },
   {
@@ -430,6 +430,7 @@
    "outputs": [],
    "source": [
     "# numerical test for \n",
+    "\n",
     "def plot_approx(K = 100,M = 500,P = 500):\n",
     "    ks = np.arange(1,K+1)\n",
     "    d_prod = (K-ks+1)*(ks-1)*P*M/K**2/max(M,P) #*max(M,P) #The M is for normalization\n",
@@ -482,7 +483,7 @@
     "#include D for anticausal part\n",
     "#cost =nk1*nk+nk1*m+p*nk+p*m\n",
     "# only include D once -> divide it by 2\n",
-    "cost =dk1*dk+dk1*m+p*dk+0.5*p*m\n",
+    "cost =2*dk1*dk+2*dk1*M/K+2*P/K*dk+P*M/K**2\n",
     "cost_sum = sp.Sum(cost,(k,1,K))\n",
     "cost_sum"
    ]
@@ -500,7 +501,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_prod=cost_sum.subs({dk:gamma*(K-k+1)*(k-1)*p*m,dk1:gamma*(K-k+2)*(k)*p*m})\n",
+    "d_prod = gamma*(K-k+1)*(k-1)*P*M/(K**2*N).subs(N,M) #here N is min(M,P)\n",
+    "d_prod_k = d_prod\n",
+    "d_prod_k1 = d_prod.subs(k,k+1)\n",
+    "\n",
+    "cost_prod=cost_sum.subs({dk:d_prod_k,dk1:d_prod_k1})\n",
     "sp.simplify(cost_prod)"
    ]
   },
@@ -510,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arg_prod = cost.subs({dk:gamma*(K-k+1)*(k-1)*p*m,dk1:gamma*(K-k+2)*(k)*p*m})\n",
+    "arg_prod = cost.subs({dk:d_prod_k,dk1:d_prod_k1})\n",
     "arg_prod"
    ]
   },
@@ -520,8 +525,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_total_prod = transfrom_sum(arg_prod,k,K)\n",
-    "cost_total_prod"
+    "cost_total_prod = transfrom_sum(arg_prod,k,K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_total_prod.expand().collect(K)"
    ]
   },
   {
@@ -541,18 +554,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_total_prod=cost_total_prod.subs({p:N/K,m:N/K}).expand().collect(K)\n",
+    "cost_total_prod=cost_total_prod.subs({M:N,P:N}).expand().collect(K)\n",
     "cost_total_prod"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "deriv = sp.diff(cost_total_prod,K)\n",
-    "deriv"
+    "sp.solve(deriv,K)"
    ]
   },
   {
@@ -573,12 +584,18 @@
     "f = sp.lambdify([K,(N,gamma)],cost_total_prod)\n",
     "Ks = 2**np.arange(11)\n",
     "Nn = Ks[-1]\n",
-    "for gamma_tilde in np.logspace(-5,0,7):\n",
-    "    costs= f(Ks,(1024,gamma_tilde*1./float(Nn)))\n",
+    "for gamma_tilde in np.logspace(-2,0,6):\n",
+    "    costs= f(Ks,(1024,gamma_tilde))\n",
     "    plt.semilogy(np.arange(11),costs,label=\"g=\"+str(gamma_tilde))\n",
+    "    i = np.argmin(costs)\n",
+    "    plt.scatter(i,costs[i])\n",
     "    \n",
     "plt.legend()\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.hlines(Nn**2,0,10)\n",
+    "locs, labels = plt.xticks()\n",
+    "plt.xticks(locs,[\"$2^{\"+str(int(loc))+\"}$\" for loc in locs])\n",
+    "plt.xlim([0,10])"
    ]
   },
   {
@@ -587,7 +604,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_total_prod.subs(K,1)"
+    "cost_total_prod.subs(K,2)"
    ]
   },
   {
@@ -596,16 +613,24 @@
    "source": [
     "## Now minimum\n",
     "\n",
+    "Here I consider only square systems. A similar derivation is also possible for nonsquare martrices but result in a slightly more difficult cost\n",
     "$$d_k = \\gamma \\min((K-k+1)p,(k-1)m) = \\begin{cases}\n",
-    "    \\gamma (k-1)m &\\text{if } k\\leq K/2+1 \\\\\n",
-    "    \\gamma (K+1-k)m &\\text{if } k > K/2+1 \\\\\n",
+    "    \\gamma (k-1)\\frac{M}{K} &\\text{if } k\\leq K/2+1 \\\\\n",
+    "    \\gamma (K+1-k)\\frac{P}{K} &\\text{if } k > K/2+1 \\\\\n",
     "\\end{cases}$$\n",
     "\n",
-    "This gives \n",
+    "$$\n",
+    "d_k = \\gamma \\min((K-k+1)\\frac{P}{K},(k-1)\\frac{M}{K}) = \\begin{cases}\n",
+    "    \\gamma (k-1)\\frac{M}{K} &\\text{if } k\\leq \\frac{M+(K+1)P}{(M+P)} \\\\\n",
+    "    \\gamma (K+1-k)\\frac{P}{K} &\\text{if } k > \\frac{M+(K+1)P}{(M+P)} \\\\\n",
+    "\\end{cases}\n",
+    "$$\n",
     "\n",
+    "For an even number of stages the total cost can be split up in two sums.\n",
+    "The first sum uses the first case and the second sum uses the second case.\n",
     "$$\\text{Total Cost} = \\sum_{k=1}^{K/2}\\text{cost}_{k} + \\sum_{k=K/2+1}^{K}\\text{cost}_{k}$$\n",
     "\n",
-    "For $K/2+1$ we can use either one so we can include $K/2$ in the first sum, at leasst for even $v$"
+    "For an odd number one has to introduce a middle sum."
    ]
   },
   {
@@ -615,8 +640,8 @@
    "outputs": [],
    "source": [
     "display(cost)\n",
-    "arg_min1 = cost.subs({dk:gamma*(K-1)*m,dk1:gamma*(k)*m})\n",
-    "arg_min2 = cost.subs({dk:gamma*(K+1-k)*m,dk1:gamma*(K-k)*m})\n",
+    "arg_min1 = cost.subs({dk:gamma*(k-1)*N/K,dk1:gamma*(k)*N/K})\n",
+    "arg_min2 = cost.subs({dk:gamma*(K+1-k)*M/K,dk1:gamma*(K-k)*M/K})\n",
     "\n",
     "display(arg_min1)\n",
     "\n",
@@ -630,7 +655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_total_min=cost_total_min.subs({p:N/K,m:N/K}).expand().collect(K)\n",
+    "cost_total_min=cost_total_min.subs({P:N,M:N}).expand().collect(K)\n",
     "cost_total_min"
    ]
   },
@@ -643,12 +668,14 @@
     "f = sp.lambdify([K,(N,gamma)],cost_total_min)\n",
     "Ks = 2**np.arange(11)\n",
     "Nn = Ks[-1]\n",
-    "for gamma_tilde in np.logspace(-5,0,7):\n",
+    "for gamma_tilde in np.logspace(-2,0,6):\n",
     "    costs= f(Ks,(1024,gamma_tilde))\n",
+    "    costs[0] = Nn**2\n",
     "    plt.semilogy(np.arange(11),costs,label=\"g=\"+str(gamma_tilde))\n",
     "    \n",
     "plt.legend()\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.hlines(Nn**2,0,10)"
    ]
   },
   {
@@ -658,6 +685,15 @@
    "outputs": [],
    "source": [
     "f(np.array([2,5,10,25,50]),(100,1))*2 #*2 for anticuasal part"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_total_min.subs(K,2)#.subs(gamma,0.39)"
    ]
   },
   {
