--- a/Code/Explore_matrix.ipynb
+++ b/Code/Explore_matrix.ipynb
@@ -362,6 +362,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Estimate the state dims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_sigmas_Hankel(A,K):\n",
+    "    \n",
+    "    d_in = A.shape[1]\n",
+    "    boundaries = d_in/K*np.arange(1,K)\n",
+    "    boundaries_in = np.round(boundaries).astype(int)\n",
+    "    #print(\"d_in\",d_in)\n",
+    "    #print(\"bounds_in\",boundaries_in)\n",
+    "\n",
+    "    d_out = A.shape[0]\n",
+    "    boundaries = d_out/K*np.arange(1,K)\n",
+    "    boundaries_out = np.round(boundaries).astype(int)\n",
+    "    #print(\"d_out\",d_out)\n",
+    "    #print(\"bounds_out\",boundaries_out)\n",
+    "    \n",
+    "    sigmas = []\n",
+    "    for i in range(K-1):\n",
+    "        sigmas.append(np.linalg.svd(A[boundaries_out[i]:,:boundaries_in[i]],compute_uv=False))\n",
+    "    return sigmas\n",
+    "    \n",
+    "K = 20\n",
+    "sigmas = calc_sigmas_Hankel(mats[0],K)\n",
+    "\n",
+    "max_sigmas = max([np.max(sig) for sig in sigmas])\n",
+    "for alpha in [0.7,0.6,0.5,0.4]:\n",
+    "    eps = alpha*max_sigmas\n",
+    "    d =[np.count_nonzero(sig>eps) for sig in sigmas]\n",
+    "    d.append(0)\n",
+    "    d.insert(0,0)\n",
+    "    plt.plot(np.array(d))\n",
+    "\n",
+    "plt.grid()\n",
+    "plt.xlabel(r\"$k$\")\n",
+    "plt.ylabel(r\"$d_k$\")\n",
+    "\n",
+    "x = np.linspace(0,20)\n",
+    "#y = 0.4*x*(-x+20)\n",
+    "#plt.plot(x,y)\n",
+    "\n",
+    "#y = 0.15*x*(-x+20)\n",
+    "#plt.plot(x,y)\n",
+    "#y = 0.07*x*(-x+20)\n",
+    "#plt.plot(x,y)\n",
+    "[P,M] = mats[0].shape\n",
+    "d = 0.14*(K-x)*(x)*P*M/((K**2)*min(P,M))\n",
+    "plt.plot(x,d)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -385,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
