--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -494,6 +494,29 @@ Trained Models at http://dx.doi.org/10.5281/zenodo.53189},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/FHS7RRHQ/Zhou und Tao - 2013 - Greedy Bilateral Sketch, Completion & Smoothing.pdf:application/pdf},
 }
 
+%=====================================================================================================================
+%Others
+%=====================================================================================================================
 
+
+@article{knuth_johann_1993,
+	title = {Johann Faulhaber and sums of powers},
+	volume = {61},
+	issn = {0025-5718, 1088-6842},
+	url = {http://arxiv.org/abs/math/9207222},
+	doi = {10.1090/S0025-5718-1993-1197512-7},
+	abstract = {Early 17th-century mathematical publications of Johann Faulhaber contain some remarkable theorems, such as the fact that the \$r\$-fold summation of \$1{\textasciicircum}m,2{\textasciicircum}m,...,n{\textasciicircum}m\$ is a polynomial in \$n(n+r)\$ when \$m\$ is a positive odd number. The present paper explores a computation-based approach by which Faulhaber may well have discovered such results, and solves a 360-year-old riddle that Faulhaber presented to his readers. It also shows that similar results hold when we express the sums in terms of central factorial powers instead of ordinary powers. Faulhaber's coefficients can moreover be generalized to factorial powers of noninteger exponents, obtaining asymptotic series for \$1{\textasciicircum}\{{\textbackslash}alpha\}+2{\textasciicircum}\{{\textbackslash}alpha\}+...+n{\textasciicircum}\{{\textbackslash}alpha\}\$ in powers of \$n{\textasciicircum}\{-1\}(n+1){\textasciicircum}\{-1\}\$.},
+	pages = {277--294},
+	number = {203},
+	journaltitle = {Mathematics of Computation},
+	shortjournal = {Math. Comp.},
+	author = {Knuth, Donald E.},
+	urldate = {2022-04-16},
+	date = {1993},
+	eprinttype = {arxiv},
+	eprint = {math/9207222},
+	keywords = {Mathematics - Classical Analysis and {ODEs}},
+	file = {arXiv Fulltext PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/PANLLL86/Knuth - 1993 - Johann Faulhaber and sums of powers.pdf:application/pdf;arXiv.org Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/G34Y9M2U/9207222.html:text/html},
+}
 
 
